<resources>
    <string name="app_name">Assignment</string>
    <string name="final_amount">Final Amount</string>
    <string name="final_value">$1010</string>
    <string name="delivery_value">$10</string>
    <string name="delivery">Delivery</string>
    <string name="price_value">$1000</string>
    <string name="total_price">Total Price</string>
    <string name="plus">+</string>
    <string name="text_number">1</string>
    <string name="minus">-</string>
    <string name="size">Size</string>
    <string name="colors">Colors</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>