<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_constraint_layout"
    android:layout_margin="10dp"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/amountDetails"
        android:background="@drawable/bg_constraint_layout"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/total_price"
            android:textSize="16sp"
            android:id="@+id/tvTotalPrice"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/price_value"
            android:textSize="16sp"
            android:id="@+id/tvTotalPriceInDollars"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTotalPrice"
            android:layout_marginTop="15dp"
            android:text="@string/delivery"
            android:textSize="16sp"
            android:id="@+id/tvDelivery"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTotalPriceInDollars"
            android:layout_marginTop="15dp"
            android:text="@string/delivery_value"
            android:textSize="16sp"
            android:id="@+id/tvDeliveryInDollars"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/tvDelivery"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_constraint_layout"
            android:padding="10dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/final_amount"
                android:textSize="16sp"
                android:id="@+id/tvFinalAmount"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/final_value"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/tvFinalAmountInDollars"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/amountDetails"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="end"
        android:id="@+id/llButtonAddRemove"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_add_remove"
            android:id="@+id/btnPlus"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_number"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/tvNumber"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_add_remove"
            android:id="@+id/btnMinus"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llButtonAddRemove"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/size"
        android:textSize="20sp"
        android:id="@+id/tvSize"
        />
    
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvSize"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:id="@+id/recyclerViewSize"
        tools:listitem="@layout/each_item_size"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewSize"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/colors"
        android:textSize="20sp"
        android:id="@+id/tvColors"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvColors"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:listitem="@layout/each_item_colors"
        android:id="@+id/recyclerViewColors"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewColors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_button_add_remove"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        android:id="@+id/btnAddToCart"/>


</androidx.constraintlayout.widget.ConstraintLayout>